--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./dist/Waterfall-React.mjs",
   "module": "./dist/Waterfall-React.mjs",
   "scripts": {
-    "build": "vite build",
-    "prepublishOnly": "npm run build"
+    "start": "webpack serve --mode development",
+    "buildWeb": "webpack --mode production",
+    "buildWaterfall": "vite build"
   },
   "repository": {
     "type": "git",
@@ -14,10 +15,20 @@
   },
   "homepage": "https://github.com/Found-404/React_WaterfallLayout",
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@vitejs/plugin-vue": "^5.2.3",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
     "terser": "^5.39.0",
     "vite": "^6.2.4",
-    "vite-plugin-css-injected-by-js": "^3.5.2"
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "webpack": "^5.99.5",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "author": "Found-404",
   "license": "ISC",
